use less memory in gradle build